# detector-characterization

./: .gitignore  HasKALopt  README.md
HasKAL/: FrameUtils.hsc  HasKAL-DataBase.cabal  HasKAL-GUI.cabal  HasKAL-KAGALI.cabal  HasKAL-Minimal.cabal  HasKAL.cabal  LICENSE  PlotUtils.hs  SpectrumUtils.hs  frameutil.cabal  stack.yaml
HasKAL/Monitor/: EXTKleineWelle.hs
HasKAL/MonitorUtils/: EXTKleineWelle.hs
HasKAL/exe-src/: BLRMS.hs  GWDetectorResponseInjection.hs  Makefile  RunRegistFrame2FrameFullDB.hs  Spectrum2IMRrange.hs  Spectrum2Inspiralrange.hs  Spectrum2Ringdownrange.hs  amplifier.hs  applyTransferFunction.hs  bekijo.hs  ctl_getChannelInfo.hs  ctl_getData.hs  ctl_runSensMon.hs  ctl_showChannels.hs  db2cache.hs  dependencySearch.sh  diffCache.hs  dropData.hs  existChannel.hs  existChannelNow.hs  filter.hs  frame2stdout.hs  genRandomData.hs  generateCacheFile.hs  getAntennaPattern.hs  getCurrentGPS.hs  gif_bin2stdout.hs  gps2localtime.hs  hrsync.hs  kagraDailyDataFind.hs  kagraDataFind.hs  kagraDataPoint.hs  loadFrameData.hs  localtime2gps.hs  maximum.hs  mean.hs  minimum.hs  plot2DGlitchParameters.hs  plotGlitchEvent.hs  plotGlitchHistogram.hs  (+63 more)
HasKAL/src/: HasKAL_FrameUtils.hsc
PEM/.github/: ISSUE_TEMPLATE.md
attic/: README.md  test-test.txt
attic/CGI/: CommonForm.hs  Function.hs  Makefile  SampleChannel.hs  cal.cgi.hs  calSubSys.cgi.hs  dailyFrame.cgi.hs  dailySubSys.cgi.hs  date_1.cgi.hs  date_2.cgi.hs  date_3.cgi.hs  date_4.cgi.hs  date_5.cgi.hs  generateChannelList.cgi.hs  main_1.cgi.hs  main_2.cgi.hs  main_3.cgi.hs  main_4.cgi.hs  main_5.cgi.hs  multiChannelViewer.cgi.hs  multiChannelViewer2.cgi.hs  pastDataViewer.cgi.hs  selectChannelList.cgi.hs  webMonFrame.cgi.hs  webMonPortal.cgi.hs  webMonitor.cgi.hs  webToolFrame.cgi.hs  webToolPortal.cgi.hs
attic/CGI_old/: Makefile  brucoDetail.cgi.hs  multiChannelViewer2.cgi.hs  webMonitor.cgi.hs
attic/Coherence/: Function.hs  Makefile  main.hs  test.hs
attic/CorrelationAnalysis/: 00README.txt  CalCorrelation.hs  CorrelationFunction.c  CorrelationFunction.h  FFT.hs  InjectionType.hs  UsefulFunction.hs  check_correlation.hs  check_correlation_chunk.hs  check_spect0908.hs  check_spect09082.hs  check_spect0910.hs  frameData2CalibratedData.hs  frameData2LPF_correlation.hs  frameData2SpectrogramePic.hs  frameReadCheck.hs  gene_data.c  gene_data_white.c  gene_data_white_sf.c  gene_mod_noise.sh  generateHtml.hs  generateUpconvNoise.hs  makefile  modG_factor.txt  outputCorrelateRawData2Text.hs  outputCorrelatedData2Text.hs  parameters.h  setupChannelList.sh  usefulFunction.hs  (+3 more)
attic/HasKALIDE/: HasKALIDE.cabal  stack.yaml
attic/HasKALIDE/app/: Main.hs
attic/HasKALIDE/src/: Lib.hs
attic/HasKALIDE/test/: HasKALnotebook.html
attic/HasKALIDE/test/.ipynb_checkpoints/: tutorial-ihaskell-inline-r-checkpoint.ipynb
attic/debugGWPSD/: debug.cabal
attic/debugGWPSD/app/: debug.hs
attic/develAppHasKAL/: appHasKAL.cabal  stack.yaml
attic/develAppHasKAL/app/: appHasKAL.hs  chk_resampling.hs  snrHistHz.hs  testR2H.hs  testnds.hs
attic/develAppHasKAL/src/: DistCor.hs  Function.hs  distcor.c  distcor.h
attic/glitchmon_stack/GlitchMon/: GlitchMon.cabal  stack.yaml
attic/glitchmon_stack/GlitchMon/app/: plot2DGlitchParameters.hs  plotGlitchEvent.hs  runGlitchmonCachefile.hs  testGlitchmonFile.hs  testGlitchmonTime.hs
attic/glitchmon_stack/GlitchMon/src/GlitchMon/: DBFunction.hs  Data.hs  DataConditioning.hs  EventTriggerGeneration.hs  GlitchMonFile.hs  GlitchMonRT.hs  GlitchMonTime.hs  GlitchParam.hs  GlitchPlot.hs  ParameterEstimation.hs  PipelineFunction.hs  RegisterEventtoDB.hs  RegisterGlitchEvent.hs  RunGlitchPipeline.hs  Signature.hs
attic/templateHasKAL/: appHasKAL.cabal  stack.yaml
attic/testKagali/: appHasKAL.cabal  stack.yaml
attic/testKagali/app/: main_chirplet_txt.hs  main_nha_raw.hs  main_nha_txt.hs  sample.hs  testchirplet.hs  testchirplet2.hs
attic/testKagali/src/: DKGLUtils_new.c  DKGLUtils_new.h  Function.hs  KAGALIUtils_new.hs  LibHasKAL.hs  chirplet_func.c
channels/: channelListIOO.txt  channelListLAS.txt  channelListMIR.txt  channelListTest.txt
doc/: HasKAL-Constant-CGSM.html  HasKAL-Constant-MKSA.html  HasKAL-Constant.html  HasKAL-DetectorUtils-Detector.html  HasKAL-DetectorUtils-DetectorParam.html  HasKAL-DetectorUtils-Function.html  HasKAL-DetectorUtils-Signature.html  HasKAL-ExternalUtils-GSL-RandomNumberDistributions.html  HasKAL-ExternalUtils-GSL-RandomNumberGeneration.html  HasKAL-ExternalUtils-LAL-Lwtprint.html  HasKAL-FrameUtils-FileManipulation.html  HasKAL-FrameUtils-FrameUtils.html  HasKAL-FrameUtils-Function.html  HasKAL-FrameUtils-PickUpFileName.html  HasKAL-GUI_Utils-GUI_AntennaPattern.html  HasKAL-GUI_Utils-GUI_CorrelationMon.html  HasKAL-GUI_Utils-GUI_GaussianityRayleighMon.html  HasKAL-GUI_Utils-GUI_GaussianityStudentRayleighMon.html  HasKAL-GUI_Utils-GUI_GlitchKleineWelle.html  HasKAL-GUI_Utils-GUI_RangeIMBH.html  HasKAL-GUI_Utils-GUI_RangeInspiral.html  HasKAL-GUI_Utils-GUI_RangeRingDown.html  HasKAL-GUI_Utils-GUI_RangeStochMon.html  HasKAL-GUI_Utils-GUI_Supplement.html  HasKAL-GUI_Utils-GUI_Utils.html  HasKAL-Misc-CoastData.html  HasKAL-Misc-Environment.html  HasKAL-Misc-Flip3param.html  HasKAL-Misc-SMatrixMapping.html  HasKAL-Misc-UMatrixMapping.html  HasKAL-MonitorUtils-CorrelationMon-CalCorrelation.html  HasKAL-MonitorUtils-CorrelationMon-CorrelationMethod.html  HasKAL-MonitorUtils-KleineWelle-EXTKleineWelle.html  HasKAL-MonitorUtils-RangeMon-IMBH.html  HasKAL-MonitorUtils-RangeMon-InspiralRingdownDistanceQuanta.html  HasKAL-MonitorUtils-RangeMon-StochMon-StochMon.html  HasKAL-MonitorUtils-RayleighMon-RayleighMon.html  HasKAL-MonitorUtils-SRMon-Signature.html  HasKAL-MonitorUtils-SRMon-StudentRayleighFunctions.html  HasKAL-MonitorUtils-SRMon-StudentRayleighMon.html  (+107 more)
frameutil/: frameutil.cabal
haskellzemi/: #sec5.hs#  baby.hs  kadai1.hs  kadai2.hs  sec3.1.hs  sec3.hs  sec4.hs  sec5.1.hs  sec5.hs
myhaskall/: Detector.hs  DetectorSensitivity.hs  SpiralorRingdownSnr.hs
optFiles/: MockDataChallenge
sample-data/: test-1066392016-300.gwf
test/: testData.txt
(+694 files in other folders)
