name:                HasKALIDE
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/HasKALIDE#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , HasKAL==0.1.0.0
                     , inline-r==0.7.1.2
                     , ihaskell==0.6.4.0
                     , ihaskell-blaze==0.3.0.0
                     , ihaskell-inline-r==0.1.0.0
                     , ipython-kernel==0.6.1.0
                     , ghc-parser==0.1.7.0
                     , system-argv0==0.1.1
                     , cipher-aes==0.2.10
                     , storable-complex==0.2.2
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fPIC 
executable HasKALIDE-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fPIC
  build-depends:       base
                     , HasKALIDE
                     , inline-r==0.7.1.2
                     , HasKAL==0.1.0.0
                     , random==1.1
  default-language:    Haskell2010
-- 
-- test-suite HasKALIDE-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , HasKALIDE
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fPIC -dynamic -shared
--   default-language:    Haskell2010
-- 
-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/HasKALIDE
