name:                debug
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://gwwiki.icrr.u-tokyo.ac.jp/JGWwiki/KAGRA/Subgroups/DET
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable app
  hs-source-dirs:      app
  main-is:      debug.hs
  ghc-options: -O2 
  build-depends:       
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,vector==0.10.12.3
   ,time==1.4.2
   ,deepseq==1.3.0.2
  default-language:    Haskell2010


