name:                appHasKAL
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://gwwiki.icrr.u-tokyo.ac.jp/JGWwiki/KAGRA/Subgroups/DET
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Function
-- Modules included in this library but not exported.
-- other-modules:
  ghc-options:
  C-sources:
    src/ndsGetData.c
  cc-options: -Wall -O2 -std=c99 -fPIC
  build-depends:
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,vector
   ,hmatrix
  default-language:    Haskell2010

executable testR2H
  hs-source-dirs:      app
  main-is:      testR2H.hs
  ghc-options: -opta-Wa,-mrelax-relocations=no
  build-depends:
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,appHasKAL==0.1.0.0
   ,inline-r
   ,ihaskell
   ,syb
   ,ihaskell-inline-r
   ,vector
   ,transformers
   ,hmatrix
  default-language:    Haskell2010


executable testnds
  hs-source-dirs:      app
  main-is:      testnds.hs
  ghc-options: -opta-Wa,-mrelax-relocations=no
  build-depends:
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,vector
  default-language:    Haskell2010
  extra-libraries: ndsclient


