name:                appHasKAL
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://gwwiki.icrr.u-tokyo.ac.jp/JGWwiki/KAGRA/Subgroups/DET
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibHasKAL
  build-depends:       
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
  default-language:    Haskell2010

executable app
  hs-source-dirs:      app
  main-is:      appHasKAL.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,appHasKAL==0.1.0.0
  default-language:    Haskell2010


