name:                appHasKAL
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://gwwiki.icrr.u-tokyo.ac.jp/JGWwiki/KAGRA/Subgroups/DET
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    LibHasKAL,
    KAGALIUtils_new
  ghc-options:
  C-sources:
    src/chirplet_func.c
    src/DKGLUtils_new.c
  cc-options: -Wall -O2 -std=c99 -fPIC

  build-depends:
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,inline-r
   ,vector
   ,hmatrix
  default-language:    Haskell2010

executable main_nha_raw
  hs-source-dirs:      app
  main-is:      main_nha_raw.hs
  ghc-options:
  build-depends:
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,appHasKAL==0.1.0.0
   ,vector
  default-language:    Haskell2010
  extra-libraries: kagali

executable main_nha_txt
  hs-source-dirs:      app
  main-is:      main_nha_txt.hs
  ghc-options:
  build-depends:
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,appHasKAL==0.1.0.0
   ,vector
  default-language:    Haskell2010
  extra-libraries: kagali


executable sample
  hs-source-dirs:      app
  main-is:      sample.hs
  ghc-options:
  build-depends:
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,appHasKAL==0.1.0.0
   ,vector
  default-language:    Haskell2010
  extra-libraries: kagali


executable testchirplet
  hs-source-dirs:      app
  main-is:      testchirplet.hs
  ghc-options:
  build-depends:
    base >= 4.7 && < 5
   ,HasKAL==0.1.0.0
   ,appHasKAL==0.1.0.0
   ,vector
   ,inline-r
   ,transformers
   ,hmatrix
   ,hmatrix-gsl-stats
  default-language:    Haskell2010
  extra-libraries: kagali
