name:                GlitchMon
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://gwwiki.icrr.u-tokyo.ac.jp/JGWwiki/KAGRA/Subgroups/DET
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    GlitchMon.DBFunction,
    GlitchMon.Data,
    GlitchMon.DataConditioning,
    GlitchMon.EventTriggerGeneration,
    GlitchMon.GlitchMonFile,
    GlitchMon.GlitchMonTime,
    GlitchMon.GlitchParam,
    GlitchMon.GlitchPlot,
    GlitchMon.ParameterEstimation,
    GlitchMon.PipelineFunction,
    GlitchMon.RegisterEventtoDB,
    GlitchMon.RegisterGlitchEvent,
    GlitchMon.Signature,
    GlitchMon.Table 
  build-depends:       
    base >= 4.7 && < 5
   ,transformers==0.3.0.0
   ,relational-query==0.6.0.0
   ,HDBC-session==0.1.0.0
   ,relational-query-HDBC==0.1.0.1
   ,HDBC==2.4.0.1
   ,persistable-record==0.1.0.1
   ,hmatrix==0.16.1.5
   ,HasKAL==0.1.0.0
   ,mtl==2.1.3.1
   ,containers==0.5.5.1
   ,resourcet==1.1.5
   ,conduit==1.2.4.2
   ,text==1.2.0.6
   ,system-filepath==0.4.13.4
   ,directory==1.2.1.0
   ,filepath==1.3.0.2
   ,fsnotify==0.1.0.3
   ,lifted-base==0.2.3.6
   ,Chart==1.5.3
   ,Chart-gtk==1.5.1
   ,Chart-cairo==1.5.1
   ,colour==2.3.3
   ,data-default-class==0.0.1
   ,lens==4.7.0.1
   ,process==1.2.0.0
   ,palette==0.1.0.2
  default-language:    Haskell2010

executable runGlitchMonFile
  hs-source-dirs:      app
  main-is:             testGlitchmonFile.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    base >= 4.7 && < 5
   ,GlitchMon==0.1.0.0
   ,HasKAL==0.1.0.0
  default-language:    Haskell2010

executable runGlitchMonTime
  hs-source-dirs:      app
  main-is:             testGlitchmonTime.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.7 && < 5
   ,GlitchMon==0.1.0.0
   ,HasKAL==0.1.0.0
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/gw-analysis/detector-characterization/tree/master/attic/glitchMon

